[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
sha2 = "0.10.2"
hex_fmt = "0.3.0"
bincode = "1.0"
dotenv = "0.15.0"
futures = "0.3"
mongodb = { version = "2.2.0", futures = ["async-std-runtime"] }

# [dependencies.mongodb]
# version = "2.2.0"
# default-features = false
# features = ["async-std-runtime"] 


