[package]
name = "rust_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10.2"
hex_fmt = "0.3.0"
bincode = "1.0"
dotenv = "0.15.0"
futures = "0.3"
env_logger = "0.9.0"

# [dependencies.mongodb]
# mongodb = { version = "2.2.0", futures = ["async-std-runtime"] }
# version = "2.2.0"
# default-features = false
# features = ["async-std-runtime"] 


