[package]
name = "rust_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
futures = "0.3"
env_logger = "0.9.0"

# Serde
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"

# [dependencies.serde_with]
# version = "2.0.0"

# Crypto
anyhow = "1.0"
secp256k1 = {version="0.24.0", features=["global-context","serde", "rand-std", "alloc","bitcoin_hashes"]}
sha2 = "0.10.2"
tiny-keccak = { version = "1.4" }
web3 = "0.17.0"
rsa = "0.6.1"
hex = "0.3.1"
hex_fmt = "0.3.0"
rand = "0.8.5"

# [dependencies.mongodb]
# mongodb = { version = "2.2.0", futures = ["async-std-runtime"] }
# version = "2.2.0"
# default-features = false
# features = ["async-std-runtime"] 


